--- a/css/main.scss
+++ b/css/main.scss
@@ -226,18 +226,58 @@
     font-weight: 700;
 }
 
+@font-face {
+    font-family: "GalanoGrotesqueAlt";
+    src: url("./fonts/Galano\ Grotesque\ Alt.otf");
+}
+@font-face {
+    font-family: "GalanoGrotesqueAltBlack";
+    src: url("./fonts/Galano\ Grotesque\ Alt\ Black.otf");
+}
+@font-face {
+    font-family: "GalanoGrotesqueAltBold";
+    src: url("./fonts/Galano\ Grotesque\ Alt\ Bold.otf");
+}
+@font-face {
+    font-family: "GalanoGrotesqueAltExtraBold";
+    src: url("./fonts/Galano\ Grotesque\ Alt\ Extra\ Bold.otf");
+}
+@font-face {
+    font-family: "GalanoGrotesqueAltExtraLight";
+    src: url("./fonts/Galano\ Grotesque\ Alt\ Extra\ Light.otf");
+}
+@font-face {
+    font-family: "GalanoGrotesqueAltMedium";
+    src: url("./fonts/Galano\ Grotesque\ Alt\ Medium.otf");
+}
+@font-face {
+    font-family: "GalanoGrotesqueAltHeavy";
+    src: url("./fonts/Galano\ Grotesque\ Alt\ Heavy.otf");
+}
+@font-face {
+    font-family: "GalanoGrotesqueAltLight";
+    src: url("./fonts/Galano\ Grotesque\ Alt\ Light.otf");
+}
+
+
 $body-color: #373a3c;
 
 $container-max-widths: (
-  md: 820px,
+  md: 800px,
   lg: 1000px,
   xl: 1200px
 );
 
-$display3-size:               2.7rem;
-$display4-size:               2rem;
+$modal-transition: transform .6s ease-out;
 
-$display3-weight:             500;
+$modal-content-border-radius: 0.4rem;
+
+$display1-size:               5rem;
+$display2-size:               3rem;
+$display3-size:               2rem;
+$display4-size:               1.3rem;
+
+
 
 
 @import "../node_modules/bootstrap/scss/bootstrap";
@@ -250,6 +290,10 @@ $display3-weight:             500;
 body, html {
     height: 100%;
     width: 100%;
+}
+
+body {
+    font-family: "GalanoGrotesqueAlt", Helvetica, sans-serif;
 }
 
 header {
@@ -296,8 +340,8 @@ header {
             }
 
             .nav-link {
-                font-size: 15px;
-                color: antiquewhite;
+                font-size: 12px;
+                color: #fff;
                 font-family: "Ubuntu";
                 text-transform: uppercase;
             }
@@ -313,37 +357,50 @@ header {
 
 .hero {
     background-color: #0D3250;
-    margin-top: 0px;
-    background-image: none;
+    background-image: url(../images/sativa.png)no-repeat;
     overflow: hidden;
     position: relative;
     width: 100%;
     color: #fff;
-    padding-top: 4.2rem;
 
     h1 {
-        font-size: 54px;
-        font-weight: 700;
-        font-family: "Kanit-Bold";
+        font-size: 56px;
+        font-family: "GalanoGrotesqueAltExtraBold";
     }
 
-    h2.lead{
-        font-size: 20px;
-        font-family: "Open Sans";
-        font-weight: 300;
+    h2{
+        font-size: 30px;
+        font-family: "GalanoGrotesqueAltLight";
+        line-height: 40px;
     }
 
-    .banner {
-        background: url(../images/hero_art_screens.png)no-repeat 0 0;
-        background-position: center;
-        height: 450px;
-
+    .form-control {
+        height: 53px;
+        border-top-left-radius: 30px;
+        border-bottom-left-radius: 30px;
+        padding-left:30px;
+        background-color: #eafbff;
+        border: 0;
+        
+    }
+    .btn {
+        border-top-right-radius: 30px;
+        border-bottom-right-radius: 30px;
+        padding-right:20px;
+        background:#007b5e;
+        border-color:#007b5e;
+    }
+    .form-control:focus {
+        color: #495057;
+        background-color: #eafbff;
+        border: 0;
+        outline: 0;
+        box-shadow: none;
     }
 }
 
 .overview {
-    color: #fff;
-    background: -webkit-linear-gradient(-45deg,#6e1a52,#ec5252);
+    background-image: linear-gradient(to bottom right,#f7f7f7,#eafbff);
 
     h1 {
         font-size: 18px;
@@ -360,16 +417,158 @@ header {
 
 footer {
     background: #0D3250;
-    color: antiquewhite;
+    color: #eafbff;
     font-family: 'Trebuchet MS';
+    
 
     h5 {
         text-transform: uppercase;
+        font-size: 12px;
     }
 
     .nav-link {
-        font-size: 15px;
-        color: antiquewhite;
+        font-size: 14px;
+        color: #eafbff;
         font-family: "Ubuntu";
     }
+}
+
+.footer {
+    
+}
+
+
+#couponModal .modal-content{
+	overflow:hidden;
+}
+a.h2{
+    color:#007b5e;
+    margin-bottom:0;
+    text-decoration:none;
+}
+#couponModal .form-control {
+    height: 53px;
+    border-top-left-radius: 30px;
+    border-bottom-left-radius: 30px;
+	padding-left:30px;
+}
+#couponModal .btn {
+    border-top-right-radius: 30px;
+    border-bottom-right-radius: 30px;
+	padding-right:20px;
+	background:#007b5e;
+	border-color:#007b5e;
+}
+#couponModal .form-control:focus {
+    color: #495057;
+    background-color: #fff;
+    border-color: #007b5e;
+    outline: 0;
+    box-shadow: none;
+}
+#couponModal .top-strip{
+	height: 155px;
+    background: #007b5e;
+    transform: rotate(141deg);
+    margin-top: -94px;
+    margin-right: 190px;
+    margin-left: -130px;
+    border-bottom: 65px solid #4CAF50;
+    border-top: 10px solid #4caf50;
+}
+#couponModal .bottom-strip{
+	height: 155px;
+    background: #007b5e;
+    transform: rotate(112deg);
+    margin-top: -110px;
+    margin-right: -215px;
+    margin-left: 300px;
+    border-bottom: 65px solid #4CAF50;
+    border-top: 10px solid #4caf50;
+}
+
+
+
+.section {
+
+    .nav a {
+        font-size: 20px;
+        font-family: 'Trebuchet MS';
+    }
+
+    #tabs .nav-tabs .nav-item.show .nav-link, .nav-tabs .nav-link.active {
+        color: #f3f3f3;
+        background-color: #0D3250;
+        border-bottom: 1px solid !important;
+        font-size: 20px;
+    }
+    #tabs .nav-tabs .nav-link {
+        border: 1px solid #EAFBFF;
+        border-top-left-radius: .25rem;
+        border-top-right-radius: .25rem;
+        color: #eee;
+        font-size: 20px;
+    }
+}
+
+
+
+
+/******************* Timeline Demo - 4 *****************/
+.main-timeline4{overflow:hidden;position:relative}
+.main-timeline4:before{content:"";width:5px;height:70%;background:#0D3250;position:absolute;top:70px;left:50%;transform:translateX(-50%)}
+.main-timeline4 .timeline-content:before,.main-timeline4 .timeline:before{top:50%;transform:translateY(-50%);content:""}
+.main-timeline4 .timeline{width:50%;padding-left:95px;float:right;position:relative}
+.main-timeline4 .timeline:before{width:20px;height:20px;border-radius:50%;background:#fff;border:5px solid #0d3250;position:absolute;left:-10px}
+.main-timeline4 .timeline-content{display:block;padding-left:140px;position:relative}
+.main-timeline4 .timeline-content:before{width:90px;height:10px;border-top:7px dotted #0d3250;position:absolute;left:-92px}
+.main-timeline4 .year{display:inline-block;width:120px;height:120px;line-height:100px;border-radius:50%;border:10px solid #f54957;font-size:30px;color:#f54957;text-align:center;box-shadow:inset 0 0 10px rgba(0,0,0,.4);position:absolute;top:0;left:0}
+.main-timeline4 .year:before{content:"";border-left:20px solid #f54957;border-top:10px solid transparent;border-bottom:10px solid transparent;position:absolute;bottom:-13px;right:0;transform:rotate(45deg)}
+
+
+.main-timeline4 .title{color:#f54957;}
+
+.main-timeline4 .description{color:#a8a8a8;font-family: "-apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;"}
+.main-timeline4 .timeline:nth-child(2n){padding:0 95px 0 0}
+.main-timeline4 .timeline:nth-child(2n) .timeline-content:before,.main-timeline4 .timeline:nth-child(2n) .year,.main-timeline4 .timeline:nth-child(2n):before{left:auto;right:-10px}
+.main-timeline4 .timeline:nth-child(2n) .timeline-content{padding:0 140px 0 0}
+.main-timeline4 .timeline:nth-child(2n) .timeline-content:before{right:-92px}
+.main-timeline4 .timeline:nth-child(2n) .year{right:0}
+.main-timeline4 .timeline:nth-child(2n) .year:before{right:auto;left:0;border-left:none;border-right:20px solid #f54957;transform:rotate(-45deg)}
+.main-timeline4 .timeline:nth-child(2){margin-top:110px}
+.main-timeline4 .timeline:nth-child(odd){margin:-110px 0 0}
+.main-timeline4 .timeline:nth-child(even){margin-bottom:80px}
+.main-timeline4 .timeline:first-child,.main-timeline4 .timeline:last-child:nth-child(even){margin:0}
+.main-timeline4 .timeline:nth-child(2n) .year{border-color:#1ebad0;color:#1ebad0}
+.main-timeline4 .timeline:nth-child(2) .year:before{border-right-color:#1ebad0}
+.main-timeline4 .timeline:nth-child(2n) .title{color:#1ebad0}
+.main-timeline4 .timeline:nth-child(3n) .year{border-color:#7cba01;color:#7cba01}
+.main-timeline4 .timeline:nth-child(3) .year:before{border-left-color:#7cba01}
+.main-timeline4 .timeline:nth-child(3n) .title{color:#7cba01}
+.main-timeline4 .timeline:nth-child(4n) .year{border-color:#f8781f;color:#f8781f}
+.main-timeline4 .timeline:nth-child(4) .year:before{border-right-color:#f8781f}
+.main-timeline4 .timeline:nth-child(4n) .title{color:#f8781f}
+
+
+@media only screen and (max-width:1200px){.main-timeline4 .year{top:50%;transform:translateY(-50%)}
+}
+@media only screen and (max-width:990px){.main-timeline4 .timeline{padding-left:75px}
+.main-timeline4 .timeline:nth-child(2n){padding:0 75px 0 0}
+.main-timeline4 .timeline-content{padding-left:130px}
+.main-timeline4 .timeline:nth-child(2n) .timeline-content{padding:0 130px 0 0}
+.main-timeline4 .timeline-content:before{width:68px;left:-68px}
+.main-timeline4 .timeline:nth-child(2n) .timeline-content:before{right:-68px}
+}
+@media only screen and (max-width:767px){.main-timeline4{overflow:visible}
+.main-timeline4:before{height:100%;top:0;left:0;transform:translateX(0)}
+.main-timeline4 .timeline:before,.main-timeline4 .timeline:nth-child(2n):before{top:60px;left:-9px;transform:translateX(0)}
+.main-timeline4 .timeline,.main-timeline4 .timeline:nth-child(even),.main-timeline4 .timeline:nth-child(odd){width:100%;float:none;text-align:center;padding:0;margin:0 0 10px}
+.main-timeline4 .timeline-content,.main-timeline4 .timeline:nth-child(2n) .timeline-content{padding:0}
+.main-timeline4 .timeline-content:before,.main-timeline4 .timeline:nth-child(2n) .timeline-content:before{display:none}
+.main-timeline4 .timeline:nth-child(2n) .year,.main-timeline4 .year{position:relative;transform:translateY(0)}
+.main-timeline4 .timeline:nth-child(2n) .year:before,.main-timeline4 .year:before{border:none;border-right:20px solid #f54957;border-top:10px solid transparent;border-bottom:10px solid transparent;top:50%;left:-23px;bottom:auto;right:auto;transform:rotate(0)}
+.main-timeline4 .timeline:nth-child(2n) .year:before{border-right-color:#1ebad0}
+.main-timeline4 .timeline:nth-child(3n) .year:before{border-right-color:#7cba01}
+.main-timeline4 .timeline:nth-child(4n) .year:before{border-right-color:#f8781f}
+.main-timeline4 .inner-content{padding:10px}
 }
