--- a/css/main.css
+++ b/css/main.css
@@ -134,7 +134,7 @@
 @font-face {
   font-family: "Montserrat-Bold";
   src: url("./fonts/Montserrat-Bold.ttf") format("truetype");
-  font-weight: 700; }
+  font-weight: 900; }
 @font-face {
   font-family: "Roboto";
   src: url("./fonts/Roboto-Regular.ttf") format("truetype");
@@ -10957,7 +10957,7 @@ header .navigation {
 
 .hero {
   background-color: #0D3250;
-  background-image: url(../images/sativa.png) no-repeat;
+  background-image: url(../images/farepay2.png);
   overflow: hidden;
   position: relative;
   width: 100%;
@@ -10966,9 +10966,10 @@ header .navigation {
     font-size: 56px;
     font-family: "GalanoGrotesqueAltExtraBold"; }
   .hero h2 {
-    font-size: 30px;
+    font-size: 28px;
     font-family: "GalanoGrotesqueAltLight";
-    line-height: 40px; }
+    line-height: 40px;
+    font-weight: bold; }
   .hero .form-control {
     height: 53px;
     border-top-left-radius: 30px;
@@ -10988,15 +10989,6 @@ header .navigation {
     border: 0;
     outline: 0;
     box-shadow: none; }
-
-.overview {
-  background-image: linear-gradient(to bottom right, #f7f7f7, #eafbff); }
-  .overview h1 {
-    font-size: 18px; }
-
-.wrap h1 {
-  font-family: "Asap-Medium";
-  color: #245C89; }
 
 footer {
   background: #0D3250;
@@ -11058,241 +11050,62 @@ a.h2 {
   border-bottom: 65px solid #4CAF50;
   border-top: 10px solid #4caf50; }
 
-.section .nav a {
-  font-size: 20px;
-  font-family: 'Trebuchet MS'; }
-.section #tabs .nav-tabs .nav-item.show .nav-link, .section .nav-tabs .nav-link.active {
-  color: #f3f3f3;
-  background-color: #0D3250;
-  border-bottom: 1px solid !important;
-  font-size: 20px; }
-.section #tabs .nav-tabs .nav-link {
-  border: 1px solid #EAFBFF;
-  border-top-left-radius: .25rem;
-  border-top-right-radius: .25rem;
-  color: #eee;
-  font-size: 20px; }
-
-/******************* Timeline Demo - 4 *****************/
-.main-timeline4 {
-  overflow: hidden;
-  position: relative; }
-
-.main-timeline4:before {
-  content: "";
-  width: 5px;
-  height: 70%;
-  background: #0D3250;
-  position: absolute;
-  top: 70px;
-  left: 50%;
-  transform: translateX(-50%); }
-
-.main-timeline4 .timeline-content:before, .main-timeline4 .timeline:before {
-  top: 50%;
-  transform: translateY(-50%);
-  content: ""; }
-
-.main-timeline4 .timeline {
-  width: 50%;
-  padding-left: 95px;
-  float: right;
-  position: relative; }
-
-.main-timeline4 .timeline:before {
-  width: 20px;
-  height: 20px;
-  border-radius: 50%;
-  background: #fff;
-  border: 5px solid #0d3250;
-  position: absolute;
-  left: -10px; }
-
-.main-timeline4 .timeline-content {
-  display: block;
-  padding-left: 140px;
-  position: relative; }
-
-.main-timeline4 .timeline-content:before {
-  width: 90px;
-  height: 10px;
-  border-top: 7px dotted #0d3250;
-  position: absolute;
-  left: -92px; }
-
-.main-timeline4 .year {
-  display: inline-block;
-  width: 120px;
-  height: 120px;
-  line-height: 100px;
-  border-radius: 50%;
-  border: 10px solid #f54957;
-  font-size: 30px;
-  color: #f54957;
-  text-align: center;
-  box-shadow: inset 0 0 10px rgba(0, 0, 0, 0.4);
-  position: absolute;
-  top: 0;
-  left: 0; }
-
-.main-timeline4 .year:before {
-  content: "";
-  border-left: 20px solid #f54957;
-  border-top: 10px solid transparent;
-  border-bottom: 10px solid transparent;
-  position: absolute;
-  bottom: -13px;
-  right: 0;
-  transform: rotate(45deg); }
-
-.main-timeline4 .title {
-  color: #f54957; }
-
-.main-timeline4 .description {
-  color: #a8a8a8;
-  font-family: "-apple-system, BlinkMacSystemFont, " Segoe UI ", Roboto, " Helvetica Neue ", Arial, sans-serif;"; }
-
-.main-timeline4 .timeline:nth-child(2n) {
-  padding: 0 95px 0 0; }
-
-.main-timeline4 .timeline:nth-child(2n) .timeline-content:before, .main-timeline4 .timeline:nth-child(2n) .year, .main-timeline4 .timeline:nth-child(2n):before {
-  left: auto;
-  right: -10px; }
-
-.main-timeline4 .timeline:nth-child(2n) .timeline-content {
-  padding: 0 140px 0 0; }
-
-.main-timeline4 .timeline:nth-child(2n) .timeline-content:before {
-  right: -92px; }
-
-.main-timeline4 .timeline:nth-child(2n) .year {
-  right: 0; }
-
-.main-timeline4 .timeline:nth-child(2n) .year:before {
-  right: auto;
-  left: 0;
-  border-left: none;
-  border-right: 20px solid #f54957;
-  transform: rotate(-45deg); }
-
-.main-timeline4 .timeline:nth-child(2) {
-  margin-top: 110px; }
-
-.main-timeline4 .timeline:nth-child(odd) {
-  margin: -110px 0 0; }
-
-.main-timeline4 .timeline:nth-child(even) {
-  margin-bottom: 80px; }
-
-.main-timeline4 .timeline:first-child, .main-timeline4 .timeline:last-child:nth-child(even) {
-  margin: 0; }
-
-.main-timeline4 .timeline:nth-child(2n) .year {
-  border-color: #1ebad0;
-  color: #1ebad0; }
-
-.main-timeline4 .timeline:nth-child(2) .year:before {
-  border-right-color: #1ebad0; }
-
-.main-timeline4 .timeline:nth-child(2n) .title {
-  color: #1ebad0; }
-
-.main-timeline4 .timeline:nth-child(3n) .year {
-  border-color: #7cba01;
-  color: #7cba01; }
-
-.main-timeline4 .timeline:nth-child(3) .year:before {
-  border-left-color: #7cba01; }
-
-.main-timeline4 .timeline:nth-child(3n) .title {
-  color: #7cba01; }
-
-.main-timeline4 .timeline:nth-child(4n) .year {
-  border-color: #f8781f;
-  color: #f8781f; }
-
-.main-timeline4 .timeline:nth-child(4) .year:before {
-  border-right-color: #f8781f; }
-
-.main-timeline4 .timeline:nth-child(4n) .title {
-  color: #f8781f; }
-
-@media only screen and (max-width: 1200px) {
-  .main-timeline4 .year {
-    top: 50%;
-    transform: translateY(-50%); } }
-@media only screen and (max-width: 990px) {
-  .main-timeline4 .timeline {
-    padding-left: 75px; }
-
-  .main-timeline4 .timeline:nth-child(2n) {
-    padding: 0 75px 0 0; }
-
-  .main-timeline4 .timeline-content {
-    padding-left: 130px; }
-
-  .main-timeline4 .timeline:nth-child(2n) .timeline-content {
-    padding: 0 130px 0 0; }
-
-  .main-timeline4 .timeline-content:before {
-    width: 68px;
-    left: -68px; }
-
-  .main-timeline4 .timeline:nth-child(2n) .timeline-content:before {
-    right: -68px; } }
-@media only screen and (max-width: 767px) {
-  .main-timeline4 {
-    overflow: visible; }
-
-  .main-timeline4:before {
-    height: 100%;
-    top: 0;
-    left: 0;
-    transform: translateX(0); }
-
-  .main-timeline4 .timeline:before, .main-timeline4 .timeline:nth-child(2n):before {
-    top: 60px;
-    left: -9px;
-    transform: translateX(0); }
-
-  .main-timeline4 .timeline, .main-timeline4 .timeline:nth-child(even), .main-timeline4 .timeline:nth-child(odd) {
+section {
+  font-family: Lato,Helvetica Neue Light,Helvetica Neue,Helvetica,Arial,sans-serif;
+  font-size: 16px;
+  color: #506077; }
+  section .section {
+    padding: 100px 0;
+    border-top: 1px solid #ebeff2; }
+    section .section .inn-content h2 {
+      margin: 5px 0 25px;
+      width: 290px; }
+    section .section .tab-container h3 {
+      margin: 10px 0 50px; }
+  section img {
     width: 100%;
-    float: none;
+    height: auto; }
+  section h2 {
+    font-size: 30px;
+    color: #051c3d;
+    font-weight: 400; }
+  section h3 {
+    color: #506077;
+    font-weight: 300;
+    font-style: normal;
+    font-size: 20px;
+    line-height: 27px; }
+  section .btn-default {
+    border-radius: 50rem;
+    padding: 10px 20px;
+    font-size: 18px;
+    border: 2px solid #2e3950;
+    background: transparent;
+    font-family: "Ubuntu";
+    font-weight: 500; }
+  section .sp-btn-lg {
+    padding: 20px 30px;
+    font-size: 11px;
+    border-radius: 4px; }
+  section .sp-btn-dark {
+    color: #fff;
+    background-color: #2e3950;
+    border-color: #2e3950; }
+  section .sp-btn {
+    display: inline-block;
+    margin-bottom: 0;
+    font-weight: 700;
     text-align: center;
-    padding: 0;
-    margin: 0 0 10px; }
-
-  .main-timeline4 .timeline-content, .main-timeline4 .timeline:nth-child(2n) .timeline-content {
-    padding: 0; }
-
-  .main-timeline4 .timeline-content:before, .main-timeline4 .timeline:nth-child(2n) .timeline-content:before {
-    display: none; }
-
-  .main-timeline4 .timeline:nth-child(2n) .year, .main-timeline4 .year {
-    position: relative;
-    transform: translateY(0); }
-
-  .main-timeline4 .timeline:nth-child(2n) .year:before, .main-timeline4 .year:before {
-    border: none;
-    border-right: 20px solid #f54957;
-    border-top: 10px solid transparent;
-    border-bottom: 10px solid transparent;
-    top: 50%;
-    left: -23px;
-    bottom: auto;
-    right: auto;
-    transform: rotate(0); }
-
-  .main-timeline4 .timeline:nth-child(2n) .year:before {
-    border-right-color: #1ebad0; }
-
-  .main-timeline4 .timeline:nth-child(3n) .year:before {
-    border-right-color: #7cba01; }
-
-  .main-timeline4 .timeline:nth-child(4n) .year:before {
-    border-right-color: #f8781f; }
-
-  .main-timeline4 .inner-content {
-    padding: 10px; } }
+    vertical-align: middle;
+    -ms-touch-action: manipulation;
+    touch-action: manipulation;
+    cursor: pointer;
+    background-image: none;
+    border: 1px solid transparent;
+    white-space: nowrap;
+    text-transform: uppercase;
+    padding: 11px 12px;
+    font-size: 11px;
+    border-radius: 4px; }
 
 /*# sourceMappingURL=main.css.map */
